syntax = "proto3";

option java_package = "com.example";
option java_multiple_files = true;

package com.example;

service UserService{
  rpc create(UserRequest) returns (UserResponse);
  rpc findById(RequestId) returns (UserResponse);
  rpc delete(RequestId) returns (EmptyResponse);
  rpc findAll(EmptyRequest) returns (UsersResponseList);
}

message UsersResponseList{
  repeated UserResponse users = 1;
}

message EmptyRequest{}
message EmptyResponse{}

message RequestId{
  string id = 1;
}

message UserRequest{
  string name = 1;
  string email = 2;
  string pass = 3;
}

message UserResponse{
  string id = 1;
  string name = 2;
  string email = 3;
  string pass = 4;
}